deploy/kubernetes/examples/contour/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: mhserveremu
  namespace: mhserveremu
spec:
  virtualhost:
    fqdn: mhserveremu.localdev
    tls:
      secretName: mhserveremu-tls
  routes:
    - conditions:
        - prefix: /
      services:
        - name: mhserveremu
          port: 8080

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: mhserveremu-static
  namespace: mhserveremu
spec:
  virtualhost:
    fqdn: static.mhserveremu.localdev
    tls:
      secretName: mhserveremu-tls
  routes:
    - conditions:
        - prefix: /
      services:
        - name: mhserveremu-static
          port: 80
